# bus-tracker

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routers.py
app/api/endpoints/: auth.py  tdx.py
app/dependencies/: auth.py  db.py  repository.py  use_case.py
app/infra/: redis.py
app/repositories/: auth_repository.py  tdx_repository.py
app/schemas/: user.py
app/services/: email_service.py  tdx.py
app/use_cases/: auth.py  tdx.py
app/utils/: token.py
config/: config.py
db/: schema.sql
db/migrations/: 20250412054738_add_user.sql  20250413132632_add_tdx_subscription.sql
infra/: database.py
worker/: celery.py  tasks.py
