[tool.poetry]
name = "bus-tracker"
version = "0.1.0"
description = ""
authors = ["hsingyingli <xingyingli855@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}
fastapi-limiter = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
